# pydise

./: LICENSE  README.md  detector.py  exceptions.py  setup.cfg  setup.py
.github/workflows/: lint.yml  python-publish.yml  testing.yml
pydise/: detector.py
pydise/tests/: test_base.py
tests/: test_base.py  test_conditionals.py  test_if.py  test_statements.py
