[metadata]
name = pydise
author = Hwoahwoa
author_email = hwoahwoa@protonmail.com
description = Detection of file that generate side effects when imported.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Hwoahwoa/pydise
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = python, import, side-effect

[options]
python_requires = >=3.9
packages = find:

[options.entry_points]
console_scripts =
    pydise = detector:run
